# wasm-components-with-wasmtime-embedding

./: Cargo.toml  README.MD  composed.wasm  makefile
.devcontainer/: bootstrap.sh  devcontainer.json
components/range_validator/: Cargo.toml
components/range_validator/src/: lib.rs
components/range_validator/wit/: validator.wit
components/transformer/: Cargo.toml
components/transformer/src/: lib.rs
components/transformer/wit/: transformer.wit
modules/wasm/: Cargo.toml  go.wit
modules/wasm/src/: lib.rs
src/: main.rs
src/go/: go.mod  main.go
src/go/wasm/: wasm.go
src/go/wasm-runner/: wasm-runner.go
src/go/wat/: wat.go
wit/: world.wit
