workspace = { members = ["components/range_validator", "components/transformer", "modules/wasm"] }
[package]
name = "standalone-wasmtime-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
wasmtime = { version = "16.0.0", features =['component-model', 'async', 'default', 'winch', 'debug-builtins'] }
wasmtime-wasi = {version = "*"}
