[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.6.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:transformer"

[package.metadata.component.target]
path = "../../wit"
world = "transformer" # this is optional if only one world is present at the location.

# [package.metadata.component.dependencies]
[package.metadata.component.target.dependencies]
"data:validator" = { path = "../range_validator/wit" }