[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.18.0" }
bytes = "1"
http = "0.2"
toml = "*"
fs = "*"
anyhow = "*"
rand = "*"
# async-std = "*"